fixed issue where footer overlapped content

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -5,7 +5,6 @@ body {
 
 footer {
   width: 100%;
-  position: absolute;
   bottom: 16px;
 }
 
@@ -50,6 +49,7 @@ footer {
   border-radius: 6px;
   border: solid 1px hsla(0, 0%, 0%, 0.2);
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.24), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+  margin-bottom: 16px;
 }
 
 .loginButton:hover {
